Fixing issues with data binding